Remove issue with banner height in logged out state on Firefox

--- a/src/components/about-banner/about-banner.css
+++ b/src/components/about-banner/about-banner.css
@@ -1,6 +1,6 @@
 .banner-pattern {
     width: 100%;
-    height: 100%;
+    height: auto;
     background: linear-gradient(45deg, #6710ff, #FF1480);
   }
   
